--- a/src/styles/CarouselStyles.css
+++ b/src/styles/CarouselStyles.css
@@ -1,6 +1,7 @@
 
 .carousel-container {
     margin-top: 60px;
+    margin-left: 15%;
 }
 
 .carousel-item {
@@ -23,4 +24,10 @@
     text-align: start;
     font-size: 25px;
     font-weight: bold;
+}
+
+.carousel-nav {
+    outline : none;
+    text-decoration: none;
+    color: black;
 }
