--- a/src/styles/ScreenStyles.css
+++ b/src/styles/ScreenStyles.css
@@ -13,6 +13,16 @@
     align-self: center;   
 }
 
+.header-link-nav {
+    outline : none;
+    text-decoration: none;
+}
+
+.header-logo-nav {
+    align-self: center;
+    outline: none;
+}
+
 .header-content-container {
     margin-left: 200px;
     display: flex;
@@ -110,6 +120,7 @@
 /* Search styles */
 
 .search-container {
+    margin-top: 10px;
     background-color: transparent;
     height: 5vh;
     display: flex;
@@ -118,14 +129,32 @@
     justify-content: center;
 }
 
-.search-icon {
-    width: 21px; 
-    height: 24px; 
-    align-self: center;
+.search-button {
+    margin-left: 15px;
+	box-shadow: 0px 10px 14px -7px #276873;
+	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
+	background-color:#599bb3;
+	border-radius:2em;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:14px;
+	font-weight:bold;
+	padding:13px 32px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #3d768a;
+}
+.search-button:hover {
+	background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
+	background-color:#408c99;
+}
+.search-button:active {
+	position:relative;
+	top:1px;
 }
 
 .search-form {
-    margin-top: 15px;
     margin-left: 10px;
     align-self: center;
     width: 100vh;
