--- a/src/styles/HeroStyles.css
+++ b/src/styles/HeroStyles.css
@@ -1,14 +1,19 @@
 /* Hero styles */
 .hero-background {
     height: 500px;
-    padding-top: 50px;
+    margin-top: 0px;
     background-size: cover;
     align-content: center;
 }
 
+.hero-opacity {
+    background: rgb(0, 0, 0, 0.3);
+    height: 500px;
+}
+
 .hero-content-container {
-    font-size: 170%;
-    margin-top: 5%;
+    font-size: 25px;
+    padding-top: 120px;
 }
 
 .hero-text {
@@ -19,5 +24,5 @@
 }
 
 .hero-search-container {
-    margin-top: 80px;
+    margin-top: 70px;
 }
