--- a/src/styles/HeroStyles.css
+++ b/src/styles/HeroStyles.css
@@ -1,5 +1,6 @@
 /* Hero styles */
 .hero-background {
+    width: 100vw;
     height: 500px;
     margin-top: 0px;
     background-size: cover;
@@ -14,10 +15,12 @@
 .hero-content-container {
     font-size: 25px;
     padding-top: 120px;
+    width: fit-content;    
+    align-items: flex-start;
+    margin-left: 14vw;
 }
 
 .hero-text {
-    margin-left: 22%;
     text-align: start; 
     color: white;
     font-weight: bold;
@@ -25,4 +28,19 @@
 
 .hero-search-container {
     margin-top: 70px;
+    width: 100px;
+}
+
+@media screen and (max-width: 508px) {
+    .hero-background {
+        width: 132vw;
+    }
+
+    .hero-content-container {
+        margin-left: 20vw;
+    }
+
+    .hero-search-container {
+        width: 60vw;
+    }
 }
