--- a/src/styles/ScreenStyles.css
+++ b/src/styles/ScreenStyles.css
@@ -3,12 +3,14 @@
 .header {
     background-color: #282c34;
     height: 10vh;
+    width: 100vw;
     display: flex;
     margin-top: 0px;
+    align-items: stretch;
 }
 
 .logo {
-    height: 80px;
+    height: 70px;
     width: 80px; 
     align-self: center;   
 }
@@ -24,7 +26,7 @@
 }
 
 .header-content-container {
-    margin-left: 200px;
+    margin-left: 8%;
     display: flex;
     justify-content: space-between;
 }
@@ -33,8 +35,8 @@
     display: flex;
     justify-content: space-between;
     align-self: center;
-    margin-left: 100px;
-    width: 50vh;
+    margin-left: 5vw;
+    width: 30vw;
 }
 
 .header-font {
@@ -46,7 +48,7 @@
     display: block;
     padding: 16px 0;
     margin: 0 12px;
-    font-size: 1.2rem;
+    font-size: 1.2em;
     text-transform: none;
     transition: color 0.1s, background-color 0.1s;
 }
@@ -95,6 +97,7 @@
     text-align: center;
     background-color: white;
     height: 100vh;
+    width: 100vw;
 }
 
 .screen-content {
@@ -127,11 +130,11 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
 }
 
 .search-button {
-    margin-left: 15px;
+    width: 100px;
+    margin-left: 10px;
 	box-shadow: 0px 10px 14px -7px #276873;
 	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
 	background-color:#599bb3;
@@ -142,9 +145,9 @@
 	font-family:Arial;
 	font-size:13px;
 	font-weight:bold;
-	padding:13px 32px;
+	padding:13px 27px;
 	text-decoration:none;
-	text-shadow:0px 1px 0px #3d768a;
+    text-shadow:0px 1px 0px #3d768a;
 }
 .search-button:hover {
 	background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
@@ -156,13 +159,15 @@
 }
 
 .search-form {
-    padding-left: 10px;
+    margin-left: 0px;
+    padding-left: 0.5vw;
     align-self: center;
-    width: 100vh;
+    width: 66vw;
     height: 40px;
     border-radius: 20px;
-    font-size: 15px;
+    font-size: 14px;
     font-weight: bold;
+    justify-content: space-around;
 }
 
 .search-container {
@@ -174,4 +179,22 @@
 
 .search-result-list {
     margin-top: 300px;
+}
+
+@media screen and (max-width: 420px) {
+    .header-font {
+        font-size: 1.1rem;
+    }
+
+    .header {
+        width: 116vw;
+    }
+
+    .search-button {
+        margin-left: 9px;
+    }
+
+    .screen-footer {
+        width: 116vw;
+    }
 }
