--- a/src/styles/CarouselStyles.css
+++ b/src/styles/CarouselStyles.css
@@ -11,6 +11,14 @@
     direction: column;
     align-items: center;
     align-content: center;
+    outline : none;
+    text-decoration: none;
+}
+
+.carousel-item-text-container {
+    text-align: center; 
+    width: 200px;
+    margin-top: 5px;
 }
 
 .carousel-item-image {
@@ -31,4 +39,50 @@
     outline : none;
     text-decoration: none;
     color: black;
+}
+
+.carousel-button {
+    width: 60px;
+    height: 60px; 
+    margin-right: 20px; 
+    margin-top: 110px;
+    border-radius: 50%;
+    outline : none;
+    text-decoration: none;
+    background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
+	background-color:#599bb3;
+    color: white;
+    font-weight: bold;
+    font-size: 1.5em;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.carousel-button:hover {
+	background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
+	background-color:#408c99;
+}
+.carousel-button:active {
+	position:relative;
+	top:1px;
+}
+
+@media screen and (max-width: 420px) {
+    .carousel-container {
+        margin-left: 13%;
+    }
+
+    .carousel-title {
+        margin-left: 20px;    
+    }
+
+    .carousel-button {
+        min-width: 70px;
+        height: 60px; 
+        font-size: 2em;
+    }
+
+    .carousel-item-image {
+        width: 220px;
+        height: 320px;
+    }
 }
