--- a/src/styles/CarouselStyles.css
+++ b/src/styles/CarouselStyles.css
@@ -1,16 +1,16 @@
-
-.carousel-container {
-    max-width: 70vw;
+.carousel {
+    width: 70vw;
     margin-top: 60px;
     margin-left: 15%;
 }
 
+.carousel-container {
+    display: flex;
+    width: 80vw;
+}
+
 .carousel-item {
-    width: 200px; 
-    display: grid;
-    direction: column;
-    align-items: center;
-    align-content: center;
+    width: 200px;
     outline : none;
     text-decoration: none;
 }
@@ -39,6 +39,7 @@
     outline : none;
     text-decoration: none;
     color: black;
+    background-color: grey;
 }
 
 .carousel-button {
@@ -67,22 +68,39 @@
 }
 
 @media screen and (max-width: 420px) {
-    .carousel-container {
-        margin-left: 13%;
+    .carousel {
+        max-width: 80vw;
     }
 
     .carousel-title {
         margin-left: 20px;    
     }
 
-    .carousel-button {
-        min-width: 70px;
-        height: 60px; 
-        font-size: 2em;
+    .carousel-item {
+        margin-left: 10px;
+        max-width: 180px;
     }
 
+    .carousel-container {
+        width: 140vw;
+    }
+
+    .carousel-button {
+        margin-right: 0px;
+        width: 40px;
+        height: 40px; 
+        font-size: 1.2em;
+    }
+
+    .carousel-item {
+        width: 180px;
+    }
     .carousel-item-image {
-        width: 220px;
-        height: 320px;
+        width: 180px;
+        height: 250px;
+    }
+
+    .carousel-item-text-container {
+        width: 180px;  
     }
 }
