--- a/src/styles/ListStyles.css
+++ b/src/styles/ListStyles.css
@@ -1,75 +1,70 @@
 /* List Card Styles */
 
 .list-card-background {
-    height: 500px;
     width: 300px; 
+    height: 500px;
     background-color: grey; 
 }
 
 .list-card {
+    width: 220px; 
     height: 300px;
-    width: 200px; 
     display: flex;
-    justify-content: space-between;
-    align-self: center; 
+    flex-direction: column;
+    padding-bottom: 10vh;
+    justify-content: center;
+    align-self: center;
+    box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.4);
+    border-radius: 0.5em;
 }
 
 .list-card-image {
-    max-height: 400px;
     min-height: 300px;
+    max-height: 400px;
+    box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.4);
+    border-top-left-radius: 0.5em;
+    border-top-right-radius: 0.5em;
 }
 
 .list-card-description {
-    margin-left: 10px;
-    text-align: start;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 10;
+    text-align: center;
+    font-size: 1em;
 }
 
 .list-card-title {
     width: 200px;
     font-weight: bold;
-    margin-top: 10px;
+    margin-top: 1.5vh;
+    font-size: 1em;
+    margin-left: 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
 }
 
 /* List Styles */
 
 .list {
     width: 80vw;
-    margin-left: 4vw;
+    margin-left: 8vw;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 15px;
-    grid-row-gap: 50px;
+    grid-row-gap: 15vh;
     justify-content: center;
-    margin-top: 60px;
-}
-
-.search-container {
-    margin-left: 5%;
+    padding-top: 20vh;
 }
   
 @media screen and (max-width: 420px) {
     .list {
         grid-template-columns: repeat(1, 1fr);
-        grid-row-gap: 80px;
-        margin-left: 6vw;
+        grid-row-gap: 20vh;
+        margin-left: 20vw;
     }
 
-    .list-card-description {
-        width: 43vw;
-        -webkit-line-clamp: 7;
-    }
-
-    .list-card-image {
-        max-width: 200px;
-        max-height: 300px;
-    }
-
-    .search-container {
-        margin-left: 12%;
+    .list-card-title {
+        -webkit-line-clamp: 1;
     }
 }
