--- a/src/styles/ScreenStyles.css
+++ b/src/styles/ScreenStyles.css
@@ -162,7 +162,7 @@
     margin-left: 0px;
     padding-left: 0.5vw;
     align-self: center;
-    width: 66vw;
+    width: 45vw;
     height: 40px;
     border-radius: 20px;
     font-size: 14px;
@@ -196,5 +196,9 @@
 
     .screen-footer {
         width: 116vw;
+    }
+
+    .search-form {
+        width: 66vw;
     }
 }
