--- a/src/styles/CarouselStyles.css
+++ b/src/styles/CarouselStyles.css
@@ -9,10 +9,19 @@
     width: 80vw;
 }
 
-.carousel-item {
+.carousel-home-item {
     width: 200px;
     outline : none;
     text-decoration: none;
+}
+
+.carousel-item {
+    padding-left: 10px;
+    padding-top: 120px;
+    height: 440px;
+    width: 200px;
+    outline: none;
+    text-decoration: none;     
 }
 
 .carousel-item-text-container {
@@ -76,9 +85,9 @@
         margin-left: 20px;    
     }
 
-    .carousel-item {
+    .carousel-home-item {
         margin-left: 10px;
-        max-width: 180px;
+        width: 180px;
     }
 
     .carousel-container {
@@ -92,9 +101,6 @@
         font-size: 1.2em;
     }
 
-    .carousel-item {
-        width: 180px;
-    }
     .carousel-item-image {
         width: 180px;
         height: 250px;
