--- a/src/styles/ListStyles.css
+++ b/src/styles/ListStyles.css
@@ -6,7 +6,7 @@
     background-color: grey; 
 }
 
-.list-card {
+.list-card, .list-card-carousel {
     width: 220px; 
     height: 300px;
     display: flex;
@@ -14,11 +14,11 @@
     padding-bottom: 10vh;
     justify-content: center;
     align-self: center;
-    box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.4);
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.4);
     border-radius: 0.5em;
 }
 
-.list-card-image {
+.list-card-image, .list-card-carousel-image {
     min-height: 300px;
     max-height: 400px;
     box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.4);
@@ -28,7 +28,12 @@
 
 .list-card-description {
     text-align: center;
-    font-size: 1em;
+    font-size: 0.9em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
 }
 
 .list-card-title {
@@ -66,5 +71,15 @@
 
     .list-card-title {
         -webkit-line-clamp: 1;
+    }
+
+    .list-card-carousel {
+        width: 180px; 
+        height: 300px;
+    }
+
+    .list-card-carousel-image {
+        min-height: 260px;
+        max-height: 300px;
     }
 }
