--- a/src/styles/HeroStyles.css
+++ b/src/styles/HeroStyles.css
@@ -13,7 +13,7 @@
 }
 
 .hero-content-container {
-    font-size: 25px;
+    font-size: 2em;
     padding-top: 120px;
     width: fit-content;    
     align-items: flex-start;
@@ -33,7 +33,6 @@
 
 @media screen and (max-width: 508px) {
     .hero-background {
-        width: 132vw;
         height: 500px;
     }
 
@@ -42,7 +41,8 @@
     }
 
     .hero-content-container {
-        margin-left: 20vw;
+        font-size: 1.3em;
+        margin-left: 10px;
     }
 
     .hero-search-container {
