--- a/src/styles/ListStyles.css
+++ b/src/styles/ListStyles.css
@@ -60,12 +60,21 @@
     justify-content: center;
     padding-top: 20vh;
 }
+
+.list-search-container {
+    margin-top: 5vh;
+    margin-left: 15vw;
+}
   
 @media screen and (max-width: 420px) {
     .list {
         grid-template-columns: repeat(1, 1fr);
         grid-row-gap: 20vh;
         margin-left: 20vw;
+    }
+
+    .list-search-container {
+        margin-left: 6vw;
     }
 
     .list-card-title {
