--- a/src/styles/CarouselStyles.css
+++ b/src/styles/CarouselStyles.css
@@ -1,70 +1,69 @@
 .home-carousel, .cast-carousel{
-    width: 70vw;
-    margin-top: 60px;
-    margin-left: 15%;
+  width: 80vw;
+  margin-top: 60px;
+  margin-left: 15%;
 }
 
 .carousel-container {
-    display: flex;
-    width: 80vw;
+  display: flex;
 }
 
 .carousel-home-item {
-    width: 200px;
-    outline : none;
-    text-decoration: none;
+  width: 200px;
+  outline : none;
+  text-decoration: none;
 }
 
 .carousel-item {
-    padding-left: 10px;
-    padding-top: 120px;
-    height: 440px;
-    width: 200px;
-    outline: none;
-    text-decoration: none;     
+  padding-left: 10px;
+  padding-top: 120px;
+  height: 440px;
+  width: 200px;
+  outline: none;
+  text-decoration: none;     
 }
 
 .carousel-item-text-container {
-    text-align: center; 
-    width: 200px;
-    margin-top: 5px;
+  text-align: center; 
+  width: 200px;
+  margin-top: 5px;
 }
 
 .carousel-item-image {
-    width: 210px;
-    height: 300px;
-    align-self: center;
-    border-radius: 2em;
+  width: 210px;
+  height: 300px;
+  align-self: center;
+  border-radius: 2em;
 }
 
 .carousel-title {
-    width: 300px; 
-    text-align: start;
-    font-size: 25px;
-    font-weight: bold;
+  width: 300px; 
+  text-align: start;
+  font-size: 25px;
+  font-weight: bold;
 }
 
 .carousel-nav {
-    outline : none;
-    text-decoration: none;
-    color: black;
-    background-color: grey;
+  outline : none;
+  text-decoration: none;
+  color: black;
+  background-color: grey;
 }
 
 .carousel-button {
-    width: 60px;
-    height: 60px; 
-    margin-right: 20px; 
-    margin-top: 110px;
-    border-radius: 50%;
-    outline : none;
-    text-decoration: none;
-    background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
-	background-color:#599bb3;
-    color: white;
-    font-weight: bold;
-    font-size: 1.5em;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  width: 60px;
+  height: 60px; 
+  margin-right: 20px; 
+  margin-top: 110px;
+  border-radius: 50%;
+  outline : none;
+  text-decoration: none;
+  background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
+  background-color:#599bb3;
+  color: white;
+  font-weight: bold;
+  font-size: 1.5em;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .carousel-button:hover {
@@ -76,45 +75,83 @@
 	top:1px;
 }
 
-@media screen and (max-width: 420px) {
-    .home-carousel {
-        max-width: 80vw;
-        margin-left: 10px;
-    }
+@media screen and (max-width: 462px) {
+  .home-carousel {
+    min-width: 110vw;
+  }
 
-    .cast-carousel {
-        margin-left: 2vw;
-    }
+  .cast-carousel {
+    min-width: 135vw;
+  }
+}
 
-    .carousel-title {
-        margin-left: 20px;    
-    }
+@media screen and (max-width: 690px) {
+  .carousel-home-item {
+      width: 170px;
+  }
 
-    .carousel-home-item {
-        width: 180px;
-    }
+  .carousel-item {
+    margin-left: 8px;
+  }
+}
 
-    .carousel-item {
-        margin-left: 10px;
-    }
+@media screen and (max-width: 768px) {
+  .home-carousel {
+      max-width: 80%;
+  }
 
-    .carousel-container {
-        width: 140vw;
-    }
+  .cast-carousel {
+      margin-left: 20px;
+  }
 
-    .carousel-button {
-        margin-right: 0px;
-        width: 40px;
-        height: 40px; 
-        font-size: 1.2em;
-    }
+  .carousel-title {
+      margin-left: 20px;    
+  }
 
-    .carousel-item-image {
-        width: 180px;
-        height: 250px;
-    }
+  .carousel-home-item {
+      width: 180px;
+  }
 
-    .carousel-item-text-container {
-        width: 180px;  
-    }
+  .carousel-item {
+    margin-left: 8px;
+  }
+
+  .carousel-container {
+      width: 130%;
+  }
+
+  .carousel-button {
+      margin-right: 0px;
+      width: 40px;
+      height: 40px; 
+      font-size: 1.2em;
+  }
+
+  .carousel-item-image {
+      width: 180px;
+      height: 250px;
+  }
+
+  .carousel-item-text-container {
+      width: 180px;  
+  }
+}
+
+@media screen and (max-width: 1025px) {
+  .home-carousel {
+    margin-left: 30px;
+  }
+
+  .cast-carousel {
+    margin-left: 20px;
+  }
+
+  .carousel-item {
+    margin-left: 30px;
+    width: 180px;
+  }
+
+  .carousel-container {
+      width: 120%;
+  }
 }
