--- a/src/styles/HeroStyles.css
+++ b/src/styles/HeroStyles.css
@@ -1,10 +1,8 @@
 /* Hero styles */
 .hero-background {
-    width: 100vw;
     height: 600px;
     margin-top: 0px;
     background-size: cover;
-    align-content: center;
 }
 
 .hero-opacity {
@@ -15,8 +13,7 @@
 .hero-content-container {
     font-size: 2em;
     padding-top: 120px;
-    width: fit-content;    
-    align-items: flex-start;
+    width: 400px;
     margin-left: 14vw;
 }
 
@@ -24,6 +21,7 @@
     text-align: start; 
     color: white;
     font-weight: bold;
+    max-width: 90vw;
 }
 
 .hero-search-container {
@@ -31,7 +29,20 @@
     width: 100px;
 }
 
-@media screen and (max-width: 508px) {
+@media screen and (max-width: 500px) {
+  .hero-content-container {
+      max-width: 80vw;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .hero-content-container {
+      font-size: 0.9em;
+      max-width: 60vw;
+  }
+}
+
+@media screen and (max-width: 1023px) {
     .hero-background {
         height: 500px;
     }
@@ -41,11 +52,11 @@
     }
 
     .hero-content-container {
-        font-size: 1.3em;
-        margin-left: 10px;
+        font-size: 1.2em;
+        margin-left: 20px;
     }
 
     .hero-search-container {
-        width: 60vw;
+        width: 300px;
     }
 }
