--- a/src/styles/ListStyles.css
+++ b/src/styles/ListStyles.css
@@ -52,7 +52,7 @@
 
 .list {
     width: 80vw;
-    margin-left: 8vw;
+    margin-left: 15%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 15px;
@@ -65,12 +65,26 @@
     margin-top: 5vh;
     margin-left: 15vw;
 }
-  
-@media screen and (max-width: 420px) {
+
+@media screen and (max-width: 580px) {
+  .list {
+    grid-template-columns: repeat(1, 1fr);
+    grid-row-gap: 20vh;
+    margin-left: 20%;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .list {
+    margin-left: 15%;
+  }
+}
+
+@media screen and (min-width: 580px) and (max-width: 1280px) {
     .list {
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         grid-row-gap: 20vh;
-        margin-left: 20vw;
+        margin-left: 10%;
     }
 
     .list-search-container {
